--- a/hide/package.json
+++ b/hide/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "HOST=0.0.0.0 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
-    "firebase": "^8.6.3",
-    "nuxt": "^2.15.3"
+    "firebase": "^8.3.1",
+    "moment": "^2.29.1",
+    "nuxt": "^2.15.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
