--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/vuetify": "^1.11.3",
+    "autoprefixer": "^10.4.2",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "postcss": "^8.4.7",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^3.0.23"
   }
 }
